Page Object class name changes.